--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 cache/
 out/
 
+# Ignored folders
+bin/
+broadcast/
+lib/
+
 # Ignores development broadcast logs
 !/broadcast
 /broadcast/*/31337/
